fixed nav overlaying icons changed down animation speed changed visibility to hide icon completely

--- a/src/css/imports/animation.css
+++ b/src/css/imports/animation.css
@@ -4,11 +4,15 @@
 }
 
 .show-icon {
+  will-change: opacity;
+  visibility: visible;
   opacity: 1;
   transition: opacity 1s ease;
 }
 
 .hide-icon {
+  will-change: opacity;
+  visibility: hidden;
   opacity: 0;
   transition: opacity 1s ease;
 }
