--- a/src/css/imports/layout.css
+++ b/src/css/imports/layout.css
@@ -172,23 +172,26 @@ html {
 
 .cta {
   position: fixed;
-  width: 2rem;
+  width: 2.4rem;
   right: 2.8rem;
   top: 50vh;
-  z-index: 10;
+  z-index: 5;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .icon-ticket {
   width: 2.4rem;
-  fill: var(--primary);
+  height: 5rem;
+  fill: var(--med-grey);
 }
 
 .icon-down,
 .icon-up {
-  margin: 0.8rem 0;
   width: 2.4rem;
+  height: 5rem;
   fill: var(--primary);
-  transform: translateY(0);
   will-change: transform;
   animation-duration: 0.5s;
   animation-direction: alternate;
@@ -202,6 +205,12 @@ html {
 
 .icon-up:hover {
   animation-name: upBounce;
+}
+
+.js--trigger {
+  display: inline-block;
+  width: 2.4rem;
+  height: 5rem;
 }
 
 .header {
